add: recovered token amounts on assets
